--- a/index.html
+++ b/index.html
@@ -14,7 +14,15 @@
   </head>
   <body>
     <header class="header">
-        Some text...
+      <div class="logo-box">
+        <img src="img/logo-white.png" alt="Logo" class="logo" />
+      </div>
+      <div class="text-box">
+        <h1 class="heading-primary">
+          <span class="heading-primary-main">Bella Vita</span>
+          <span class="heading-primary-sub">A month around 'The Boot'</span>
+        </h1>
+      </div>
     </header>
   </body>
 </html>
