--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
           <span class="heading-primary-main">Bella Vita</span>
           <span class="heading-primary-sub">A month around 'The Boot'</span>
         </h1>
+        <a href="#" class="btn btn-white btn-animated">Take the journey</a>
       </div>
     </header>
   </body>
