--- a/index.html
+++ b/index.html
@@ -14,15 +14,15 @@
   </head>
   <body>
     <header class="header">
-      <div class="logo-box">
-        <img src="img/logo-white.png" alt="Logo" class="logo" />
+      <div class="header__logo-box">
+        <img src="img/logo-white.png" alt="Logo" class="header__logo" />
       </div>
-      <div class="text-box">
+      <div class="header__text-box">
         <h1 class="heading-primary">
-          <span class="heading-primary-main">Bella Vita</span>
-          <span class="heading-primary-sub">A month around 'The Boot'</span>
+          <span class="heading-primary--main">Bella Vita</span>
+          <span class="heading-primary--sub">A month around 'The Boot'</span>
         </h1>
-        <a href="#" class="btn btn-white btn-animated">Take the journey</a>
+        <a href="#" class="btn btn--white btn--animated">Take the journey</a>
       </div>
     </header>
   </body>
