--- a/index.html
+++ b/index.html
@@ -27,17 +27,26 @@
     </header>
     <main>
       <section class="section-about">
-        <div class="u-center-text u-margin-bottom-8">
+        <div class="u-center-text u-margin-bottom-big">
           <h2 class="heading-secondary">
             Exciting tours for adventurous people
           </h2>
         </div>
         <div class="row">
           <div class="col-1-of-2">
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Saepe, nesciunt adipisci? Sunt commodi dignissimos, iure eveniet, incidunt, itaque officiis molestias aliquam aperiam deserunt optio quaerat. Iste nobis aliquid maxime cupiditate.
+            <h3 class="heading-tertiary u-margin-bottom-small">Pack your bags and head to the land of pasta</h3>
+            <p class="paragraph">
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Debitis laudantium molestias ducimus non minima dolor sunt fugiat suscipit. Quis voluptatem tempore debitis mollitia eius quibusdam sapiente recusandae quo necessitatibus! Tempore?
+            </p>
+            <h3 class="heading-tertiary u-margin-bottom-small">Pack your bags and head to the land of pasta</h3>
+            <p class="paragraph">
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Debitis laudantium molestias ducimus non minima dolor sunt fugiat suscipit. Quis voluptatem tempore debitis mollitia eius quibusdam sapiente recusandae quo necessitatibus! Tempore?
+            </p>
+            <a class="btn-text" href=#>
+              Learn more &rarr;
+            </a>
           </div>
           <div class="col-1-of-2">
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Debitis laudantium molestias ducimus non minima dolor sunt fugiat suscipit. Quis voluptatem tempore debitis mollitia eius quibusdam sapiente recusandae quo necessitatibus! Tempore?
           </div>
         </div>
       </section>
