--- a/index.html
+++ b/index.html
@@ -55,6 +55,46 @@
           </div>
         </div>
       </section>
+      <section class="section-features">
+        <div class="row">
+          <div class="col-1-of-4">
+            <div class="feature-box">
+              <i class="feature-box__icon icon-basic-world"></i>
+              <h3 class="heading-tertiary">Explore Italy</h3>
+              <p class="feature-box__text">
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Debitis laudantium molestias ducimus
+              </p>
+            </div>
+          </div>
+          <div class="col-1-of-4">
+            <div class="feature-box">
+              <i class="feature-box__icon icon-basic-compass"></i>
+              <h3 class="heading-tertiary">Lost in the sauce?</h3>
+              <p class="feature-box__text">
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Debitis laudantium molestias ducimus
+              </p>
+            </div>
+          </div>
+          <div class="col-1-of-4">
+            <div class="feature-box">
+              <i class="feature-box__icon icon-basic-map"></i>
+              <h3 class="heading-tertiary">Take a food tour</h3>
+              <p class="feature-box__text">
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Debitis laudantium molestias ducimus
+              </p>
+            </div>
+          </div>
+          <div class="col-1-of-4">
+            <div class="feature-box">
+              <i class="feature-box__icon icon-basic-heart"></i>
+              <h3 class="heading-tertiary">Find amore</h3>
+              <p class="feature-box__text">
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Debitis laudantium molestias ducimus
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
     <!-- 
     <section class="grid-test">
