--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
           </div>
           <div class="col-1-of-2">
             <div class="composition">
-              <img src="img/nat-1-large.jpg" class="composition__photo composition__photo--p1" />
-              <img src="img/nat-2-large.jpg" class="composition__photo composition__photo--p2" />
-              <img src="img/nat-3-large.jpg" class="composition__photo composition__photo--p3" />
+              <img src="img/feat-1.jpg" class="composition__photo composition__photo--p1" />
+              <img src="img/feat-2.jpg" class="composition__photo composition__photo--p2" />
+              <img src="img/feat-3.jpg" class="composition__photo composition__photo--p3" />
             </div>
           </div>
         </div>
@@ -91,6 +91,45 @@
               <p class="feature-box__text">
                 Lorem ipsum dolor, sit amet consectetur adipisicing elit. Debitis laudantium molestias ducimus
               </p>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section class="section-tours">
+        <div class="u-center-text u-margin-bottom-big">
+          <h2 class="heading-secondary">
+            Highlight overview
+          </h2>
+        </div>
+        <div class="row">
+          <div class="col-1-of-3">
+            <div class="card">
+              <div class="card__side card__side--front">
+                FRONT
+              </div>
+              <div class="card__side card__side--back card__side--back-1">
+                BACK
+              </div>
+            </div>
+          </div>
+          <div class="col-1-of-3">
+            <div class="card">
+              <div class="card__side card__side--front">
+                FRONT
+              </div>
+              <div class="card__side card__side--back card__side--back-2">
+                BACK
+              </div>
+            </div>
+          </div>
+          <div class="col-1-of-3">
+            <div class="card">
+              <div class="card__side card__side--front">
+                FRONT
+              </div>
+              <div class="card__side card__side--back card__side--back-3">
+                BACK
+              </div>
             </div>
           </div>
         </div>
