--- a/index.html
+++ b/index.html
@@ -105,7 +105,23 @@
           <div class="col-1-of-3">
             <div class="card">
               <div class="card__side card__side--front">
-                FRONT
+                <div class="card__picture card__picture-1">
+                  &nbsp;
+                </div>
+                <h4 class="card__heading">
+                  <span class="card__heading-span card__heading-span--1">
+                  Countryside Tour
+                  </span>
+                </h4>
+                <div class="card__details">
+                  <ul>
+                    <li>5 day tour</li>
+                    <li>Bike through the countryside</li>
+                    <li>Sleep in comfy accommodations</li>
+                    <li>Eat like a local</li>
+                    <li>Visit rural wineries</li>
+                  </ul>
+                </div>
               </div>
               <div class="card__side card__side--back card__side--back-1">
                 BACK
