finished out card styling and content for highlights section

--- a/index.html
+++ b/index.html
@@ -124,27 +124,89 @@
                 </div>
               </div>
               <div class="card__side card__side--back card__side--back-1">
-                BACK
+                <div class="card__cta">
+                  <div class="card__price-box">
+                    <p class="card__price-only">
+                      only
+                    </p>
+                    <p class="card__price-value">
+                      $897
+                    </p>
+                  </div>
+                  <a href="#" class="btn btn--white">Book now</a>
+                </div>
               </div>
             </div>
           </div>
           <div class="col-1-of-3">
             <div class="card">
               <div class="card__side card__side--front">
-                FRONT
+                <div class="card__picture card__picture-2">
+                  &nbsp;
+                </div>
+                <h4 class="card__heading">
+                  <span class="card__heading-span card__heading-span--2">
+                  Foodie Experience
+                  </span>
+                </h4>
+                <div class="card__details">
+                  <ul>
+                    <li>7 day tour</li>
+                    <li>Visit 4 major cities</li>
+                    <li>Try every Italian delicacy</li>
+                    <li>Take part in the cooking</li>
+                    <li>Learn tips and tricks</li>
+                  </ul>
+                </div>
               </div>
               <div class="card__side card__side--back card__side--back-2">
-                BACK
+                <div class="card__cta">
+                  <div class="card__price-box">
+                    <p class="card__price-only">
+                      only
+                    </p>
+                    <p class="card__price-value">
+                      $597
+                    </p>
+                  </div>
+                  <a href="#" class="btn btn--white">Book now</a>
+                </div>
               </div>
             </div>
           </div>
           <div class="col-1-of-3">
             <div class="card">
               <div class="card__side card__side--front">
-                FRONT
+                <div class="card__picture card__picture-3">
+                  &nbsp;
+                </div>
+                <h4 class="card__heading">
+                  <span class="card__heading-span card__heading-span--3">
+                  Amore Getaway
+                  </span>
+                </h4>
+                <div class="card__details">
+                  <ul>
+                    <li>2 week tour</li>
+                    <li>Get intimate with Italy</li>
+                    <li>The best in couples activities</li>
+                    <li>Relax like never before</li>
+                    <li>Best in class couple reviews</li>
+                  </ul>
+                </div>
               </div>
               <div class="card__side card__side--back card__side--back-3">
-                BACK
+                <div class="card__cta">
+                  <div class="card__price-box">
+                    <p class="card__price-only">
+                      only
+                    </p>
+                    <p class="card__price-value">
+                      $2,987
+                    </p>
+                  </div>
+                  <a href="#" class="btn btn--white">Book now</a>
+                </div>
               </div>
             </div>
           </div>
