fixed minor styling discrepencies in tours section

--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
       <div class="header__text-box">
         <h1 class="heading-primary">
           <span class="heading-primary--main">Bella Vita</span>
-          <span class="heading-primary--sub">A month around 'The Boot'</span>
+          <span class="heading-primary--sub">Trips around 'The Boot'</span>
         </h1>
-        <a href="#" class="btn btn--white btn--animated">Take the journey</a>
+        <a href="#" class="btn btn--white btn--animated">Take a journey</a>
       </div>
     </header>
     <main>
@@ -210,6 +210,11 @@
               </div>
             </div>
           </div>
+        </div>
+        <div class="u-center-text u-margin-top-huge">
+          <a href="#" class="btn btn--green">
+            Discover all tours
+          </a>
         </div>
       </section>
     </main>
