Added review cards and background video to finish out reviews/stories section

--- a/index.html
+++ b/index.html
@@ -34,23 +34,42 @@
         </div>
         <div class="row">
           <div class="col-1-of-2">
-            <h3 class="heading-tertiary u-margin-bottom-small">Pack your bags and head to the land of pasta</h3>
+            <h3 class="heading-tertiary u-margin-bottom-small">
+              Pack your bags and head to the land of pasta
+            </h3>
             <p class="paragraph">
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Debitis laudantium molestias ducimus non minima dolor sunt fugiat suscipit. Quis voluptatem tempore debitis mollitia eius quibusdam sapiente recusandae quo necessitatibus! Tempore?
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Debitis
+              laudantium molestias ducimus non minima dolor sunt fugiat
+              suscipit. Quis voluptatem tempore debitis mollitia eius quibusdam
+              sapiente recusandae quo necessitatibus! Tempore?
             </p>
-            <h3 class="heading-tertiary u-margin-bottom-small">Pack your bags and head to the land of pasta</h3>
+            <h3 class="heading-tertiary u-margin-bottom-small">
+              Pack your bags and head to the land of pasta
+            </h3>
             <p class="paragraph">
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Debitis laudantium molestias ducimus non minima dolor sunt fugiat suscipit. Quis voluptatem tempore debitis mollitia eius quibusdam sapiente recusandae quo necessitatibus! Tempore?
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Debitis
+              laudantium molestias ducimus non minima dolor sunt fugiat
+              suscipit. Quis voluptatem tempore debitis mollitia eius quibusdam
+              sapiente recusandae quo necessitatibus! Tempore?
             </p>
-            <a class="btn-text" href=#>
+            <a class="btn-text" href="#">
               Learn more &rarr;
             </a>
           </div>
           <div class="col-1-of-2">
             <div class="composition">
-              <img src="img/feat-1.jpg" class="composition__photo composition__photo--p1" />
-              <img src="img/feat-2.jpg" class="composition__photo composition__photo--p2" />
-              <img src="img/feat-3.jpg" class="composition__photo composition__photo--p3" />
+              <img
+                src="img/feat-1.jpg"
+                class="composition__photo composition__photo--p1"
+              />
+              <img
+                src="img/feat-2.jpg"
+                class="composition__photo composition__photo--p2"
+              />
+              <img
+                src="img/feat-3.jpg"
+                class="composition__photo composition__photo--p3"
+              />
             </div>
           </div>
         </div>
@@ -62,7 +81,8 @@
               <i class="feature-box__icon icon-basic-world"></i>
               <h3 class="heading-tertiary">Explore Italy</h3>
               <p class="feature-box__text">
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Debitis laudantium molestias ducimus
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                Debitis laudantium molestias ducimus
               </p>
             </div>
           </div>
@@ -71,7 +91,8 @@
               <i class="feature-box__icon icon-basic-compass"></i>
               <h3 class="heading-tertiary">Lost in the sauce?</h3>
               <p class="feature-box__text">
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Debitis laudantium molestias ducimus
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                Debitis laudantium molestias ducimus
               </p>
             </div>
           </div>
@@ -80,7 +101,8 @@
               <i class="feature-box__icon icon-basic-map"></i>
               <h3 class="heading-tertiary">Take a food tour</h3>
               <p class="feature-box__text">
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Debitis laudantium molestias ducimus
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                Debitis laudantium molestias ducimus
               </p>
             </div>
           </div>
@@ -89,7 +111,8 @@
               <i class="feature-box__icon icon-basic-heart"></i>
               <h3 class="heading-tertiary">Find amore</h3>
               <p class="feature-box__text">
-                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Debitis laudantium molestias ducimus
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                Debitis laudantium molestias ducimus
               </p>
             </div>
           </div>
@@ -110,7 +133,7 @@
                 </div>
                 <h4 class="card__heading">
                   <span class="card__heading-span card__heading-span--1">
-                  Countryside Tour
+                    Countryside Tour
                   </span>
                 </h4>
                 <div class="card__details">
@@ -146,7 +169,7 @@
                 </div>
                 <h4 class="card__heading">
                   <span class="card__heading-span card__heading-span--2">
-                  Foodie Experience
+                    Foodie Experience
                   </span>
                 </h4>
                 <div class="card__details">
@@ -182,7 +205,7 @@
                 </div>
                 <h4 class="card__heading">
                   <span class="card__heading-span card__heading-span--3">
-                  Amore Getaway
+                    Amore Getaway
                   </span>
                 </h4>
                 <div class="card__details">
@@ -214,6 +237,65 @@
         <div class="u-center-text u-margin-top-huge">
           <a href="#" class="btn btn--green">
             Discover all tours
+          </a>
+        </div>
+      </section>
+      <section class="section-stories">
+        <div class="bg-video">
+          <video class="bg-video__content" autoplay muted loop >
+            <source src="img/video.mp4" type="video/mp4">
+            <source src="img/video.webm" type="video/webm">
+            Your browser is not supported
+          </video>
+        </div>
+        <div class="u-center-text u-margin-bottom-big">
+          <h2 class="heading-secondary">
+            Making people genuinely happy
+          </h2>
+        </div>
+        <div class="row">
+          <div class="story">
+            <figure class="story__shape">
+              <img src="img/nat-8.jpg" alt="person on a tour" class="story__img"/>
+              <figcaption class="story__caption">
+                Mary Smith
+              </figcaption>
+            </figure>
+            <div class="story__text">
+              <h3 class="heading-tertiary u-margin-bottom-small">
+                I had THE best vacation with my family
+              </h3>
+              <p>
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                Debitis laudantium molestias ducimus ipsum dolor, sit amet
+                consectetur adipisicing elit. Debitis laudantium molestia
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="story">
+            <figure class="story__shape">
+              <img src="img/nat-9.jpg" alt="person on a tour" class="story__img"/>
+              <figcaption class="story__caption">
+                Jake Wilson
+              </figcaption>
+            </figure>
+            <div class="story__text">
+              <h3 class="heading-tertiary u-margin-bottom-small">
+                My life has been changed FOREVER
+              </h3>
+              <p>
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                Debitis laudantium molestias ducimus ipsum dolor, sit amet
+                consectetur adipisicing elit. Debitis laudantium molestia
+              </p>
+            </div>
+          </div>
+        </div>
+        <div class="u-center-text u-margin-top-huge">
+          <a class="btn-text" href="#">
+            Read all reviews &rarr;
           </a>
         </div>
       </section>
