--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <title>Bella Vita</title>
   </head>
   <body>
+    <!-- HERO HEADER SECTION -->
     <header class="header">
       <div class="header__logo-box">
         <img src="img/logo-white.png" alt="Logo" class="header__logo" />
@@ -26,6 +27,7 @@
       </div>
     </header>
     <main>
+      <!-- SECOND HEADER AND ABOUT SECTION -->
       <section class="section-about">
         <div class="u-center-text u-margin-bottom-big">
           <h2 class="heading-secondary">
@@ -74,6 +76,8 @@
           </div>
         </div>
       </section>
+
+      <!-- FOUR CARD OVERVIEW SECTION -->
       <section class="section-features">
         <div class="row">
           <div class="col-1-of-4">
@@ -118,6 +122,9 @@
           </div>
         </div>
       </section>
+
+      <!-- FLIP CARD OVERVIEW SECTION -->
+
       <section class="section-tours">
         <div class="u-center-text u-margin-bottom-big">
           <h2 class="heading-secondary">
@@ -240,6 +247,8 @@
           </a>
         </div>
       </section>
+
+      <!-- BACKGROUND VIDEO AND REVIEWS SECTION -->
       <section class="section-stories">
         <div class="bg-video">
           <video class="bg-video__content" autoplay muted loop >
@@ -297,6 +306,30 @@
           <a class="btn-text" href="#">
             Read all reviews &rarr;
           </a>
+        </div>
+      </section>
+      <!-- BOOKING SECTION -->
+      <section class="section-book">
+        <div class="row">
+          <div class="book">
+            <div class="book__form">
+              <div class="u-margin-bottom-medium">
+                <h2 class="heading-secondary">
+                  Start booking now
+                </h2>
+              </div>
+              <form class="form" action="#">
+                <div class="form__group">
+                  <input class="form__input" type="text" id="name" placeholder="Full Name" required>
+                  <label for="name" class="form__label">Full Name</label>
+                </div>
+                <div class="form__group">
+                  <input class="form__input" type="email" id="email" placeholder="Email Address" required>
+                  <label for="email" class="form__label">Email Address</label>
+                </div>
+              </form>
+            </div>
+          </div>
         </div>
       </section>
     </main>
