--- a/index.html
+++ b/index.html
@@ -13,6 +13,26 @@
     <title>Bella Vita</title>
   </head>
   <body>
+    <!-- NAVIGATION -->
+    <div class="navigation">
+      <input type="checkbox" class="navigation__checkbox" id="nav-toggle">
+
+      <label for="nav-toggle" class="navigation__button">
+          <span class="navigation__icon">MENU</span>
+      </label>
+
+      <div class="navigation__background">&nbsp;</div>
+
+      <nav class="navigation__nav">
+          <ul class="navigation__list">
+              <li class="navigation__item"><a href="#" class="navigation__link"><span>01</span>About Us</a></li>
+              <li class="navigation__item"><a href="#" class="navigation__link"><span>02</span>Why choose us</a></li>
+              <li class="navigation__item"><a href="#" class="navigation__link"><span>03</span>Popular</a></li>
+              <li class="navigation__item"><a href="#" class="navigation__link"><span>04</span>Stories</a></li>
+              <li class="navigation__item"><a href="#" class="navigation__link"><span>05</span>Book now</a></li>
+              </ul>
+      </nav>
+  </div>
     <!-- HERO HEADER SECTION -->
     <header class="header">
       <div class="header__logo-box">
