--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <input type="checkbox" class="navigation__checkbox" id="nav-toggle">
 
       <label for="nav-toggle" class="navigation__button">
-          <span class="navigation__icon">MENU</span>
+          <span class="navigation__icon"></span>
       </label>
 
       <div class="navigation__background">&nbsp;</div>
